[gd_scene load_steps=4 format=3 uid="uid://dneth0b7l8t8y"]

[ext_resource type="Script" path="res://Game/DailyGameMenu.gd" id="1_12bl6"]
[ext_resource type="Texture2D" uid="uid://bqhr0nqy8osli" path="res://assets/backgrounds/background.png" id="2_fudgm"]
[ext_resource type="Theme" uid="uid://ckiied77ueyj" path="res://candlelight_theme.tres" id="3_3gck5"]

[node name="DailyGameMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_12bl6")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -32.0
offset_top = -48.0
offset_right = 571.0
offset_bottom = 564.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_fudgm")

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 592.0
offset_right = 73.0
offset_bottom = 621.0
theme = ExtResource("3_3gck5")
text = "Main Menu"

[node name="HighScoresContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 92.0
offset_top = 41.0
offset_right = 500.0
offset_bottom = 553.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="HighScoresContainer"]
layout_mode = 2
theme = ExtResource("3_3gck5")
theme_type_variation = &"HeaderLarge"
theme_override_font_sizes/font_size = 32
text = "High Scores"
horizontal_alignment = 1

[node name="HighScoresScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 92.0
offset_top = 47.0
offset_right = 500.0
offset_bottom = 559.0

[node name="NewGameContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 680.0
offset_right = 992.0
offset_bottom = 648.0
alignment = 1

[node name="NewGameSubContainer" type="VBoxContainer" parent="NewGameContainer"]
layout_mode = 2

[node name="NameInput" type="LineEdit" parent="NewGameContainer/NewGameSubContainer"]
layout_mode = 2
placeholder_text = "Enter your name:"
max_length = 30

[node name="NewGameButton" type="Button" parent="NewGameContainer/NewGameSubContainer"]
layout_mode = 2
theme = ExtResource("3_3gck5")
disabled = true
text = "New Game"

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="text_changed" from="NewGameContainer/NewGameSubContainer/NameInput" to="." method="_on_name_input_text_changed"]
[connection signal="pressed" from="NewGameContainer/NewGameSubContainer/NewGameButton" to="." method="_on_new_game_pressed"]
